--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
 				<h1 class="center">Sobre</h1>
 				<div class="row">
 					<div class="col-sm-6">
-						<img class="profile" src="images/pc.jpg">
+						<img class="profile" src="images/pc2.jpg">
 					</div>
 					<div class="col-sm-6">
 						<ul>
 							<hr>
 							<li>Java Universe</li>
+							<ul style="list-style-type:circle"><li>Programação em Java.</li></ul>
 							<li>Java Fx</li>
-							<li>Excel</li>
+							<ul style="list-style-type:circle"><li>Nova biblioteca gráfica da plataforma Java.</li></ul>
+							<li>Excel Avançado</li>
 							<li>Pic em C</li>
+							<ul style="list-style-type:circle"><li>Programação de microcontroladores.</li></ul>
 							<li>Front-end</li>
+							<ul style="list-style-type:circle">
+  								<li>HTML</li>
+  								<li>CSS</li>
+  								<ul style="list-style-type:none">Bootstrap</ul>
+  								<li>JavaScript</li>
+  								<ul style="list-style-type:none">JQuery</ul>
+							</ul>
 							<hr/>
 						</ul>
 					</div>
@@ -88,7 +98,7 @@
 	</div>
 	<footer class="footer">
 		<p class="center">
-			Desenvolvido com <span class="text-danger">&hearts;</span> por <span class="dev text-primary"> Curso web</span>.
+			Desenvolvido por <span class="dev text-primary"> Tiago Oliveira</span>.
 		</p>
 	</footer>
 	<script src="js/jquery-3.3.1.js"></script>
