--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		<div id="inicio" class="jumbotron center">
 			<h1>Tiago L P Oliveira</h1>
 			<hr class="my-4" />
-			<p class="lead">Graduando em Ciéncias da Computação.</p>
+			<p class="lead font-weight-bold">Desenvolvedor web.</p>
+			<p class="lead font-weight-bold">Graduando em Ciéncias da Computação pela Unifacs.</p>
+			<p class="lead font-weight-bold">Autodidata nas linguagens lua e C++.</p>
 			<a class="btn btn-primary conhecame" href="#sobre" role="button">Conheça-me</a>
 		</div>
 	</div>
@@ -42,11 +44,12 @@
 					<div class="col-sm-6">
 						<ul>
 							<hr>
+							<li>Git</li>
+							<li>Excel Avançado</li>
 							<li>Java Universe</li>
 							<ul style="list-style-type:circle"><li>Programação em Java.</li></ul>
 							<li>Java Fx</li>
-							<ul style="list-style-type:circle"><li>Nova biblioteca gráfica da plataforma Java.</li></ul>
-							<li>Excel Avançado</li>
+							<ul style="list-style-type:circle"><li>Nova biblioteca gráfica da plataforma Java.</li></ul>						
 							<li>Pic em C</li>
 							<ul style="list-style-type:circle"><li>Programação de microcontroladores.</li></ul>
 							<li>Front-end</li>
@@ -62,14 +65,6 @@
 					</div>
 				</div>
 			</section>
-		</div>
-	</div>
-	<div id="portifolio" class="container area1 anime">
-		<div class="jumbotron">
-			<h1 class="center">Portifólio</h1>
-			<div class="row">
-	
-			</div>
 		</div>
 	</div>
 	<div id="contato" class="container area1 anime">
