--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Curso Web</title>
+	<title>Tiago Oliveira</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body class="fundobody">
-	<nav class="menu scroll">
+	<nav class="menu">
 		<ul class="nav justify-content-center">
 			<li class="nav-item">
-				<a href="#inicio" class="nav-link font-weight-bold text-white">Inicio</a>			
+				<a href="#inicio" class="nav-link font-weight-bold text-white">Início</a>			
 			</li>
 			<li class="nav-item">
 				<a href="#sobre" class="nav-link font-weight-bold text-white">Sobre</a>			
@@ -22,10 +22,11 @@
 	</nav>
 	<div class="container area1">
 		<div id="inicio" class="jumbotron center">
+			<hr class="my-4" />
 			<h1>Tiago L P Oliveira</h1>
 			<hr class="my-4" />
 			<p class="lead font-weight-bold">Desenvolvedor web.</p>
-			<p class="lead font-weight-bold">Graduando em Ciéncias da Computação pela Unifacs.</p>
+			<p class="lead font-weight-bold">Graduando em Ciências da Computação pela Unifacs.</p>
 			<p class="lead font-weight-bold">Autodidata nas linguagens lua e C++.</p>
 			<a class="btn btn-primary conhecame" href="#sobre" role="button">Conheça-me</a>
 		</div>
