--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 	<div id="contato" class="container area1 anime">
 		<div class="jumbotron">
-			<h1 class="center">Contato</h1>
+			<h1 class="center">Contato1</h1>
 			<form>
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Nome" required="required">
